--- a/src/app/component/origin/origin.component.html
+++ b/src/app/component/origin/origin.component.html
@@ -37,7 +37,10 @@
                             <img src="assets/Linkedin.png" alt="LinkedIn de Franco Güidi" />
                         </a>
                         <a href="https://github.com/francoguidi01/Apify-Name-In-Progress" target="_blank">
-                            <img src="assets/Github.png" alt="GitHub de Franco Güidi" />
+                            <img src="assets/Github.png" alt="GitHub de projecto" />
+                        </a>
+                        <a href="https://github.com/francoguidi01/BDD-APIFY" target="_blank">
+                            <img src="assets/Github.png" alt="GitHub de bdd" />
                         </a>
                     </div>
                 </div>
