--- a/src/app/component/top-song/top-song.component.html
+++ b/src/app/component/top-song/top-song.component.html
@@ -19,7 +19,7 @@
                     data-bs-target="#shortTable" aria-expanded="false" aria-controls="shortTable"
                     style="width: 60px; height: 60px; cursor: pointer;"
                     (click)="toggleSeccion('shortTable', 'short_term')">
-                <p><strong>TIEMPO CORTO</strong></p>
+                <p><strong>4 SEMANAS</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInDown">
@@ -27,7 +27,7 @@
                     data-bs-target="#mediumTable" aria-expanded="false" aria-controls="mediumTable"
                     style="width: 60px; height: 60px; cursor: pointer;"
                     (click)="toggleSeccion('mediumTable', 'medium_term')">
-                <p><strong>TIEMPO MEDIO</strong></p>
+                <p><strong>6 MESES</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInRight">
@@ -35,7 +35,7 @@
                     data-bs-target="#longTable" aria-expanded="false" aria-controls="longTable"
                     style="width: 60px; height: 60px; cursor: pointer;"
                     (click)="toggleSeccion('longTable', 'long_term')">
-                <p><strong>TIEMPO LARGO</strong></p>
+                <p><strong>TODO TU TIEMPO</strong></p>
             </div>
         </div>
 
