--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -217,13 +217,13 @@
 /*------------------------------boton---------------------------*/
 .btn-shine {
     position: relative;
-    padding: 6px 28px; /* Reducido el padding */
+    padding: 6px 28px;
     font-family: 'Poppins', sans-serif;
-    font-size: 10px; /* Tamaño de fuente reducido */
+    font-size: 10px;
     border: none;
-    letter-spacing: 1px; /* Aumentado el espacio entre letras */
+    letter-spacing: 1px;
     text-transform: uppercase;
-    border-radius: 8px; /* Reducido el radio de borde */
+    border-radius: 8px; 
     color: #fff;
     cursor: pointer;
     overflow: hidden;
