--- a/src/app/component/make-a-playlist-quiz/make-a-playlist-quiz.component.css
+++ b/src/app/component/make-a-playlist-quiz/make-a-playlist-quiz.component.css
@@ -69,3 +69,72 @@
     }
   }
   
+
+
+.album-cover {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  margin-top: 5%;
+}
+
+.tables {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 440px;
+  overflow-y: auto; 
+  max-height: 300px;
+  width: 500px;
+}
+
+.tables::-webkit-scrollbar {
+  width: 6px;
+}
+
+.tables::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+.tables::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  border-radius: 6px;
+}
+
+.table__profile {
+  width: 400px;
+  height: 60px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+  cursor: pointer;
+  transition: transform .25s cubic-bezier(.7, .98, .86, .98), box-shadow .25s cubic-bezier(.7, .98, .86, .98);
+  background-color: rgba(255, 255, 255, 0.9);
+  margin-top: 1%;
+  text-align: center;
+}
+
+.table__profile:hover {
+  transform: scale(1.2);
+  box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
+
+}
+
+.table__name {
+  color: #979cb0;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.60px;
+  margin-left: 20px;
+
+}
+
+h1{
+  margin-top: 20px;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.9);
+}
+
