--- a/src/app/component/make-a-playlist-recommendations/make-a-playlist-recommendations.component.css
+++ b/src/app/component/make-a-playlist-recommendations/make-a-playlist-recommendations.component.css
@@ -13,8 +13,8 @@
     width: 100vw;
     height: 100vh;
     margin: 0;
-    overflow: hidden; 
     z-index: -1;
+    overflow: hidden;
   }
   .recompilation-container{
     justify-content: center;
@@ -28,6 +28,7 @@
   }
   h1{
   margin-top: 20px;
+  font-size: 18px;
   color: rgba(0, 0, 0, 0.9);
 }
 p{
@@ -76,3 +77,104 @@ p{
   50%{transform:translate(160%, 160%)}
   75%{transform:translate(0, 160%)}
 }
+/*-----------*/
+.btn-shine {
+  position: relative;
+  padding: 8px 30px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 12px;
+  border: none;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  border-radius: 8px;
+  color: #fff;
+  cursor: pointer;
+  overflow: hidden;
+  background-image: linear-gradient(to right, #F58A97, #e04759);
+  margin-left: 10px;
+  margin-bottom: 6px;
+
+  &::after {
+      content: "";
+      background: white;
+      position: absolute;
+      top: -30px;
+      left: -40px;
+      width: 30px;
+      height: 90px;
+      opacity: 0.3;
+      border-radius: 8px;
+      transform: rotate(35deg);
+      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  &:hover::after {
+      left: 120%;
+      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+}
+
+
+
+
+.album-cover {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  margin-top: 5%;
+}
+
+.tables {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 440px;
+  overflow-y: auto; 
+  max-height: 300px;
+  width: 500px;
+}
+
+.tables::-webkit-scrollbar {
+  width: 6px;
+}
+
+.tables::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+.tables::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  border-radius: 6px;
+}
+
+.table__profile {
+  width: 400px;
+  height: 60px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+  cursor: pointer;
+  transition: transform .25s cubic-bezier(.7, .98, .86, .98), box-shadow .25s cubic-bezier(.7, .98, .86, .98);
+  background-color: rgba(255, 255, 255, 0.9);
+  margin-top: 1%;
+  text-align: center;
+}
+
+.table__profile:hover {
+  transform: scale(1.2);
+  box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
+
+}
+
+.table__name {
+  color: #979cb0;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.60px;
+  margin-left: 20px;
+
+}
+
