--- a/src/app/component/social/social.component.html
+++ b/src/app/component/social/social.component.html
@@ -28,8 +28,8 @@
             </div>
         </div>
 
-        <div class="modal fade" id="ModalFollow" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-            *ngIf="selectedFriend">
+        <div class="modal fade" id="ModalFollow" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false"
+            *ngIf="selectedFriend" >
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
                     <div class="modal-header">
@@ -166,7 +166,7 @@
 </div>
 
 
-<div class="modal fade" id="modalcompareArtists" aria-hidden="true">
+<div class="modal fade" id="modalcompareArtists" data-bs-backdrop="static" aria-hidden="true">
     <div class="modal-dialog">
 
         <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
@@ -177,13 +177,12 @@
                 </div>
             </div>
 
-
-            <div class="modal-body" *ngIf="myArtistFinal && friendArtistFinal " >
+            <div class="modal-body" *ngIf="myArtist && friendArtist" >
                 <div class="row">
                     <div class="col">
                         <h3 class="text-center">TUYOS:</h3>
                         <ul class="ulCompare">
-                            <li class="liCompare" *ngFor="let artist of myArtistFinal.items"
+                            <li class="liCompare" *ngFor="let artist of myArtist.items"
                                 style="font-size: 15px; margin-top: 4%;">
                                 <div>
                                         <img [src]="artist.images[0].url" alt="{{ artist.name }}"
@@ -196,7 +195,7 @@
                     <div class="col">
                         <h3 class="text-center">SUYOS:</h3>
                         <ul class="ulCompare">
-                            <li class="liCompare" *ngFor="let artist of friendArtistFinal.artists"
+                            <li class="liCompare" *ngFor="let artist of friendArtist.artists"
                                 style="font-size: 15px; margin-top: 4%">
                                 <div>
                                     <img [src]="artist.images[0].url" alt="{{ artist.name }}"
@@ -224,7 +223,7 @@
 </div>
 
 
-<div class="modal fade" id="modalcompareSongs" tabindex="-1" aria-labelledby="exampleModalLabelSongs"
+<div class="modal fade" id="modalcompareSongs"  data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelSongs"
     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
@@ -236,12 +235,12 @@
                 </div>
             </div>
 
-            <div class="modal-body" *ngIf="friendSongFinal && mySongFinal">
+            <div class="modal-body" *ngIf="friendSong && mySong">
                 <div class="row">
                     <div class="col">
                         <h3 class="text-center">TUYAS:</h3>
                         <ul class="ulCompare">
-                            <li class="liCompare" *ngFor="let song of mySongFinal.items" style="font-size: 15px;"
+                            <li class="liCompare" *ngFor="let song of mySong.items" style="font-size: 15px;"
                                 type="button">
                                 <div style="margin-top: 10%;">
                                     <img src="assets/Star.png" alt="StarImage" style="width: 20px; height: 20px;">
@@ -254,7 +253,7 @@
                     <div class="col">
                         <h3 class="text-center">SUYAS:</h3>
                         <ul class="ulCompare">
-                            <li class="liCompare" *ngFor="let song of friendSongFinal.tracks"
+                            <li class="liCompare" *ngFor="let song of friendSong.tracks"
                                 style="font-size: 15px;" type="button">
                                 <div style="margin-top: 10%;">
                                     <img src="assets/Star.png" alt="StarImage" style="width: 20px; height: 20px;">
