--- a/src/app/component/top-artist/top-artist.component.html
+++ b/src/app/component/top-artist/top-artist.component.html
@@ -8,21 +8,21 @@
                 <img src="assets/S.png" alt="Short-Artists" type="button" data-bs-toggle="collapse"
                     data-bs-target="#shortTable" aria-expanded="false" aria-controls="shortTable"
                     style="width: 60px; height: 60px; cursor: pointer;" (click)="toggleSeccion('shortTable', 'short_term')">
-                <p><strong>TIEMPO CORTO</strong></p>
+                <p><strong>4 SEMANAS</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInDown">
                 <img src="assets/M.png" alt="Medium-Artists" type="button" data-bs-toggle="collapse"
                     data-bs-target="#mediumTable" aria-expanded="false" aria-controls="mediumTable"
                     style="width: 60px; height: 60px; cursor: pointer;" (click)="toggleSeccion('mediumTable', 'medium_term')">
-                <p><strong>TIEMPO MEDIO</strong></p>
+                <p><strong>6 MESES</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInRight">
                 <img src="assets/L.png" alt="Long-Artists" type="button" data-bs-toggle="collapse"
                     data-bs-target="#longTable" aria-expanded="false" aria-controls="longTable"
                     style="width: 60px; height: 60px; cursor: pointer;" (click)="toggleSeccion('longTable', 'long_term')">
-                <p><strong>TIEMPO LARGO</strong></p>
+                <p><strong>TODO TU TIEMPO</strong></p>
             </div>
         </div>
 
