Retoque para entrega final, se toco social

--- a/src/app/component/origin/origin.component.css
+++ b/src/app/component/origin/origin.component.css
@@ -109,5 +109,10 @@
       transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
     }
   }
+
+  .imgLG{
+    width: 30px;
+    height: 30px;
+  }
   
 
