--- a/src/app/component/make-a-playlist/make-a-playlist.component.css
+++ b/src/app/component/make-a-playlist/make-a-playlist.component.css
@@ -20,7 +20,7 @@
 .sc {
     display: flex;
     justify-content: center;
-    margin-top:20%;
+    margin-top: 20%;
     margin-left: 0%;
 }
 
@@ -28,48 +28,48 @@
     width: 100px;
     height: 100px;
     margin-left: 60%;
-   
+
 }
 
-.image-sqe{
+.image-sqe {
     width: 100px;
     height: 100px;
     margin-left: -55%;
-   
+
 }
 
 .btn-shine {
     position: relative;
     padding: 8px 30px;
     font-family: 'Poppins', sans-serif;
-    font-size: 12px; 
+    font-size: 12px;
     border: none;
-    letter-spacing: 2px; 
+    letter-spacing: 2px;
     text-transform: uppercase;
     border-radius: 8px;
     color: #fff;
     cursor: pointer;
     overflow: hidden;
     background-image: linear-gradient(to right, #F58A97, #e04759);
-    margin-left: 10px; 
+    margin-left: 10px;
     margin-bottom: 6px;
+
     &::after {
-      content: "";
-      background: white;
-      position: absolute;
-      top: -30px; /* Ajustado la posición superior */
-      left: -40px; /* Ajustado la posición izquierda */
-      width: 30px; /* Reducido el ancho */
-      height: 90px; /* Reducido la altura */
-      opacity: 0.3;
-      border-radius: 8px; /* Reducido el radio de borde */
-      transform: rotate(35deg);
-      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+        content: "";
+        background: white;
+        position: absolute;
+        top: -30px;
+        left: -40px;
+        width: 30px;
+        height: 90px;
+        opacity: 0.3;
+        border-radius: 8px;
+        transform: rotate(35deg);
+        transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
     }
-  
+
     &:hover::after {
-      left: 120%;
-      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+        left: 120%;
+        transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
     }
-  }
-  
+}
