--- a/src/app/component/origin/origin.component.css
+++ b/src/app/component/origin/origin.component.css
@@ -10,7 +10,7 @@
 
 }
 
- .background {
+.background {
     background-image: url('/assets/Background.png');
     background-size: 100% 100%;
     background-position: center;
@@ -18,7 +18,7 @@
     width: 100vw;
     height: 100vh;
     margin: 0;
-    overflow: hidden; 
+    overflow: hidden;
     z-index: -1;
 }
 
@@ -77,42 +77,43 @@
 
 .btn-shine {
     position: relative;
-    padding: 8px 30px; /* Reducido el padding */
+    padding: 8px 30px;
     font-family: 'Poppins', sans-serif;
-    font-size: 12px; /* Tamaño de fuente reducido */
+    font-size: 12px;
     border: none;
-    letter-spacing: 2px; /* Aumentado el espacio entre letras */
+    letter-spacing: 2px;
+
     text-transform: uppercase;
-    border-radius: 8px; /* Reducido el radio de borde */
+    border-radius: 8px;
+
     color: #fff;
     cursor: pointer;
     overflow: hidden;
     background-color: #F58A97;
-    margin-left: 10px; 
+    margin-left: 10px;
     margin-bottom: 6px;
-    &::after {
-      content: "";
-      background: white;
-      position: absolute;
-      top: -30px; /* Ajustado la posición superior */
-      left: -40px; /* Ajustado la posición izquierda */
-      width: 30px; /* Reducido el ancho */
-      height: 90px; /* Reducido la altura */
-      opacity: 0.3;
-      border-radius: 8px; /* Reducido el radio de borde */
-      transform: rotate(35deg);
-      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
-    }
-  
-    &:hover::after {
-      left: 120%;
-      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
-    }
-  }
 
-  .imgLG{
+    &::after {
+        content: "";
+        background: white;
+        position: absolute;
+        top: -30px;
+        left: -40px;
+        width: 30px;
+        height: 90px;
+        opacity: 0.3;
+        border-radius: 8px;
+        transform: rotate(35deg);
+        transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+
+    &:hover::after {
+        left: 120%;
+        transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+}
+
+.imgLG {
     width: 30px;
     height: 30px;
-  }
-  
-
+}
