--- a/src/app/component/top-artist/top-artist.component.html
+++ b/src/app/component/top-artist/top-artist.component.html
@@ -8,14 +8,14 @@
                 <img src="assets/S.png" alt="Short-Artists" type="button" data-bs-toggle="collapse"
                     data-bs-target="#shortTable" aria-expanded="false" aria-controls="shortTable"
                     style="width: 60px; height: 60px; cursor: pointer;" (click)="toggleSeccion('shortTable', 'short_term')">
-                <p><strong>4 SEMANAS</strong></p>
+                <p><strong>ULTIMAS 4 SEMANAS</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInDown">
                 <img src="assets/M.png" alt="Medium-Artists" type="button" data-bs-toggle="collapse"
                     data-bs-target="#mediumTable" aria-expanded="false" aria-controls="mediumTable"
                     style="width: 60px; height: 60px; cursor: pointer;" (click)="toggleSeccion('mediumTable', 'medium_term')">
-                <p><strong>6 MESES</strong></p>
+                <p><strong>ULTIMOS 6 MESES</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInRight">
