--- a/src/app/component/top-song/top-song.component.html
+++ b/src/app/component/top-song/top-song.component.html
@@ -3,11 +3,11 @@
         <app-navbar></app-navbar>
 
         <div class="animate__animated animate__jackInTheBox">
-            <div class="text-center" style="margin-top: 10px;">
-                <img src="assets/Average.png" type="button" alt="image_back" data-bs-toggle="modal"
-                    data-bs-target="#ModalFollow" style="width: 35px; height: 35px;">
-                <p type="button" data-bs-toggle="modal" data-bs-target="#ModalFollow">
-                    <strong>PROMEDIO PROXIMAMENTE</strong>
+            <div class="text-center" style="margin-top: 10px; margin-left: 45px;">
+                <img src="assets/Average.png" type="button" alt="image_back" style="width: 35px; height: 35px;"
+                    (click)="getAverage()">
+                <p type="button" (click)="getAverage()">
+                    <strong>¿QUIEN ERES MUSICALMENTE?</strong>
                 </p>
             </div>
         </div>
@@ -19,7 +19,7 @@
                     data-bs-target="#shortTable" aria-expanded="false" aria-controls="shortTable"
                     style="width: 60px; height: 60px; cursor: pointer;"
                     (click)="toggleSeccion('shortTable', 'short_term')">
-                <p><strong>4 SEMANAS</strong></p>
+                <p><strong>ULTIMAS 4 SEMANAS</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInDown">
@@ -27,7 +27,7 @@
                     data-bs-target="#mediumTable" aria-expanded="false" aria-controls="mediumTable"
                     style="width: 60px; height: 60px; cursor: pointer;"
                     (click)="toggleSeccion('mediumTable', 'medium_term')">
-                <p><strong>6 MESES</strong></p>
+                <p><strong>ULTIMOS 6 MESES</strong></p>
             </div>
 
             <div class="animate__animated animate__fadeInRight">
@@ -84,8 +84,110 @@
             </div>
         </div>
 
+        <div *ngIf="averageFlag; else noTime">
+            <div #magicButton1 type="button" data-bs-toggle="modal" data-bs-target="#averageModal">
+                <div class="modal fade" id="averageModal" tabindex="-1" aria-hidden="true">
+                    <div class="modal-dialog d-flex align-items-center justify-content-center">
+                        <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
+                            <div class="modal-body d-flex justify-content-end">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <h1 class="text-center"><strong>¿Quien eres?</strong></h1>
+                            <div class="modal-body text-center">
+                                <P><strong>{{averageText}}</strong>
+                                <P><strong>{{averageCalculation}}</strong>
+                                </P>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <ng-template #noTime>
+            <div #magicButton2 type="button" data-bs-toggle="modal" data-bs-target="#warningModal">
+                <div class="modal fade" id="warningModal" tabindex="-1" aria-hidden="true">
+                    <div class="modal-dialog d-flex align-items-center justify-content-center">
+                        <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
+                            <div class="modal-body d-flex justify-content-end">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <h1 class="text-center"><strong>Explora tu Identidad Musical en Spotify</strong></h1>
+                            <div class="modal-body text-center">
+                                <P><strong>Descubre qué canciones han marcado tu experiencia musical seleccionando
+                                        un
+                                        periodo de tiempo: últimas 4 semanas, últimos 6 meses o desde el inicio de
+                                        tu
+                                        uso en
+                                        Spotify. Observa cómo tu gusto evoluciona y define tu identidad musical a lo
+                                        largo
+                                        del tiempo.</strong>
+                                </P>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
+
     </div>
 </div>
+
+<!--CREO QUE LOS ATRIBUTOS QUE ESTAMOS MANDANDO SON ENVIROMENTS
+
+      
+        <div>
+            <button (click)="getTopSongs('long_term')">top songs large term</button>
+            <button (click)="getTopSongs('medium_term')">top songs mediem term</button>
+            <button (click)="getTopSongs('short_term')">top songs short term</button>
+
+            <button (click)="promedio_popularity()">promedio</button>
+            <button (click)="getAudioFeatures()">audio Features</button>
+            <button (click)="getAudioStats()">audio stats</button>
+
+        </div>
+
+                            <div *ngIf="topArtists">
+                                <table class="table table-success table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Photo</th>
+                                            <th scope="col">Artist Name</th>
+                                            <th scope="col">Genres</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let artist of topArtists.items">
+                                            <td><img src="{{artist.images[2].url}}" alt=""></td>
+                                            <td>{{artist.name}}</td>
+                                            <td>
+                                                <ng-container
+                                                    *ngFor="let genre of artist.genres; let last = last; let first = first">
+                                                    <ng-container *ngIf="!first && !last">, </ng-container>
+                                                    <ng-container *ngIf="last && !first"> & </ng-container>
+                                                    {{genre}}
+                                                </ng-container>
+                                            </td>
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+
+
+    <td>
+                    <ng-container *ngFor="let genre of song.genres; let last = last; let first = first">
+                        <ng-container *ngIf="!first && !last">, </ng-container>
+                        <ng-container *ngIf="last && !first"> & </ng-container>
+                        {{genre}}
+                    </ng-container>
+                </td>
+                                <td><audio src="https://p.scdn.co/mp3-preview/7c136e7220892133e94c4d13d4ca7262d3d5cf4c?cid=a00cd5e5b4d34c1996b89d04beaa411a" controls></audio></td>
+-->
+
 
 <!--
                                     <span class="table__name ">{{song.album.name}}</span>
